src/test/ui/associated-types/hr-associated-type-bound-param-2.stderr
error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
LL | where
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `str`
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`

error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:15:14
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`
...
LL |     type W = str;
   |              ^^^ the trait `std::clone::Clone` is not implemented for `str`

error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
LL | where
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `str`
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
